# test_lib_compile

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: publish.yml
testlib/: binarytree.py  linkedlist.py  main.py
tools/: publish.sh
